# SheJane

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Caddyfile  Makefile  NOTICE  ONBOARDING.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  backend-spec.md  docker-compose.prod.yml  docker-compose.yml  frontend-spec.md  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project-plan.md  spec.md  todo.md
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
admin/: Dockerfile  index.html  package-lock.json  package.json
api/: .dockerignore  Dockerfile  go.mod  go.sum
client/: .dockerignore  Dockerfile  electron-builder.yml  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  (+1 more)
local-host/python/: pyproject.toml  shejane-local-host.spec
local-host/python-spike/: graph.py  pyproject.toml  rpc.py  runner.py
local-host/python/local_host/: __init__.py  __main__.py  api_schemas.py  auth.py  config.py  event_translator.py  failure_policy.py  observability.py  progress_ledger.py  runs.py  scheduler.py  server.py
local-host/python/local_host/agent/: __init__.py  auto_router.py  builder.py  context_builder.py  subagents.py
local-host/python/local_host/agent/prompts/: developer.md
local-host/python/local_host/eval/: __init__.py  __main__.py  cases.py  driver.py  harness.py
local-host/python/local_host/lark/: __init__.py  candidates.py  connector.py  extractors.py  normalize.py  redact.py
local-host/python/local_host/llm/: backend.py  ledger.py  resolve.py  runtime.py
local-host/python/local_host/middleware/: __init__.py  input_guard.py  memory_writeback.py  outbound_policy.py  output_guard.py  plan_approval.py  plan_first.py  progress_ledger_guard.py  reflect.py  router.py  skills.py  steering.py  tool_critic.py  tool_execution.py  tool_review.py  tool_visibility.py  verification_loop.py
local-host/python/local_host/store/: sqlite.py
local-host/python/local_host/tools/: __init__.py  _gateway.py  browser.py  code.py  image.py  mcp.py  memory.py  office.py  progress.py  registry.py  runtime.py  skills.py  trivial.py  user.py  verify.py  web.py  workspace.py
local-host/python/tests/: conftest.py  helpers.py  test_advanced_overrides.py  test_agent_builder.py  test_assistant_draft.py  test_auto_router.py  test_backend_llm.py  test_cancel_midflight.py  test_cloud_tool_schema_contract.py  test_context_builder.py  test_cors.py  test_e2e_capabilities.py  test_eval_harness.py  test_event_translator.py  test_failure_policy.py  test_image_tool.py  test_lark_local_todo.py  test_lark_message_processing.py  test_lark_redaction.py  test_mcp.py  test_memory.py  test_memory_http.py  test_memory_reflection.py  test_middleware.py  test_model_providers.py  test_model_resolve.py  test_observability.py  test_plan_approval.py  test_plan_first.py  test_run_jobs.py  test_run_recovery.py  test_run_result_commit.py  test_runs_http.py  test_runtime_model.py  test_scheduled_runs.py  test_session_http.py  test_skills.py  test_smoke.py  test_sse_contract.py  test_sse_envelope.py  (+12 more)
plugins/fixtures/wasi-archive/payload/archive-component/: Cargo.toml
plugins/fixtures/wasi-archive/payload/archive-component/wit/: action-plugin.wit
plugins/speech/runtime-assets/: CMakeLists.txt  README.md  build_darwin.py  build_linux_arm64.py  whisper-1.8.6.lock.json
plugins/vision/runtime-assets/: CMakeLists.txt  README.md
scripts/: dev.sh  (+32 more)
services/runtime/: pyi_entry.py  pyproject.toml  shejane-runtime.spec
services/runtime/local_host/: __init__.py  __main__.py  api_schemas.py  auth.py  config.py  event_translator.py  failure_policy.py  model_credentials.py  observability.py  runs.py  scheduler.py  server.py  tool_schemas.py
services/runtime/local_host/agent/: backends.py  builder.py  context_builder.py  subagents.py
services/runtime/local_host/agent/prompts/: developer.md  identity.md
services/runtime/local_host/eval/: __main__.py  driver.py  harness.py  seed_provider.py
services/runtime/local_host/llm/: __init__.py  fake.py  ledger.py  resolve.py
services/runtime/local_host/middleware/: __init__.py  completion_reviewer.py  completion_router.py  input_guard.py  plan_first.py  tool_execution.py  tool_review.py  tool_visibility.py
services/runtime/local_host/plugins/: __init__.py  executor.py  guest_disk.py  guest_iso.py  identity.py  manifest.py  registry.py  sandbox_contract.py  sources.py  tools.py  wasi.py
services/runtime/local_host/store/: __init__.py  sqlite.py
services/runtime/local_host/tools/: __init__.py  mcp.py  memory.py  pdf.py  registry.py  trivial.py  user.py  web.py
services/runtime/native/managed-worker-linux/: main.go
services/runtime/tests/: conftest.py  gateway_model.py  helpers.py  streaming_model.py  test_agent_builder.py  test_approval_reviewer.py  test_cancel_midflight.py  test_clarification_reviewer.py  test_cli.py  test_cloud_tool_schema_contract.py  test_completion_reviewer.py  test_context_builder.py  test_cors.py  test_documents_package.py  test_documents_worker.py  test_e2e_capabilities.py  test_eval_harness.py  test_event_translator.py  test_failure_policy.py  test_guest_iso.py  test_image_tool.py  test_macos_managed_worker_launcher.py  test_macos_managed_worker_vm_asset_builder.py  test_macos_managed_worker_vm_assets.py  test_macos_managed_worker_vm_gate.py  test_managed_worker_guest_disk.py  test_managed_worker_guest_image.py  test_managed_worker_guest_rootfs_builder.py  test_managed_worker_linux.py  test_managed_worker_sandbox.py  test_managed_worker_sandbox_contract.py  test_managed_worker_spike.py  test_mcp.py  test_media_foundation_package.py  test_media_foundation_runtime_asset.py  test_media_foundation_worker.py  test_memory.py  test_memory_http.py  test_middleware.py  test_model_ledger.py  (+63 more)
services/runtime/tests/fixtures/: e2e_mcp_conformance_client.py  e2e_mcp_server.py  macos_vm_runtime_crash.py  qemu_serial_gate.py
(+1050 files in other folders)
