[project]
name = "langgraph-spike"
version = "0.0.1"
description = "Phase 0 spike: validate Node↔Python JSON-RPC + LangGraph wiring"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.6.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.9.0",
]

[tool.uv]
package = false
