[project]
name = "jiandanly-local-host"
version = "0.1.0"
description = "Local Agent Harness daemon (Python + LangGraph + create_agent)"
requires-python = ">=3.12"
dependencies = [
    # LangChain / LangGraph stack
    "langchain>=1.1.0",
    "langchain-core>=1.0.0",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langchain-mcp-adapters>=0.2.0",
    # Browser agent (replaces 10 granular browser.* tools)
    "browser-use>=0.7.0",
    "playwright>=1.50.0",
    # Subagents via deepagents (SubAgentMiddleware)
    "deepagents>=0.2.0",
    # LangChain wrappers for fallback model chains (init_chat_model).
    # NB: the bare `openai` SDK and `langchain-tavily` are intentionally
    # ABSENT — image.* and web.search both proxy through the cloud
    # Tool Gateway (Go API holds the OpenAI/Tavily keys). browser-use
    # is the only remaining direct LLM consumer in the daemon and it
    # gets its langchain client via the `browser_llm` arg in
    # `agent/builder.py`.
    "langchain-anthropic>=0.4.0",
    "langchain-openai>=0.4.0",
    # HTTP layer
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "httpx>=0.28.0",
    # Misc utilities
    "pyperclip>=1.9.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "aiosqlite>=0.20.0",
    # Office document parsing (Phase 1: read + outline only; edit
    # primitives land in Phase 2). markitdown produces LLM-ready
    # markdown from .docx / .xlsx in one call. python-docx and
    # openpyxl give low-level DOM access for the outline tool and
    # for the upcoming edit primitives.
    "markitdown[docx,xlsx]>=0.1.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.2",
]

[project.scripts]
jiandanly-local-host = "local_host.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "ASYNC", "RUF"]
ignore = [
    "E501",     # line length — handled separately
    "ASYNC230", # async open via aiofiles — out of scope, sync open is fine
    "ASYNC240", # sync os.path / pathlib in async — same rationale; we use
                # asyncio not anyio/trio so the rule's prescribed fix
                # (`anyio.path`) isn't applicable.
    "B007",     # unused loop variable — too noisy for ad-hoc DNS
                # resolution loops where the tuple shape comes from the
                # stdlib API we can't change.
    "RUF001",   # ambiguous-unicode chars in strings — we ship CJK
                # prompts, regex patterns matching fullwidth punctuation,
                # and en-dashes in prose. All intentional.
    "RUF002",   # same family but for docstrings
    "RUF003",   # same family but for comments
]
