cmake_minimum_required(VERSION 3.20)
project(shejane-speech-engine LANGUAGES C CXX)

if(NOT DEFINED WHISPER_SOURCE OR NOT EXISTS "${WHISPER_SOURCE}/CMakeLists.txt")
    message(FATAL_ERROR "WHISPER_SOURCE must point to the locked whisper.cpp source")
endif()
string(LENGTH "${SHEJANE_MODEL_SHA256}" SHEJANE_MODEL_SHA256_LENGTH)
if(
    NOT DEFINED SHEJANE_MODEL_SHA256
    OR NOT SHEJANE_MODEL_SHA256 MATCHES "^[0-9a-f]+$"
    OR NOT SHEJANE_MODEL_SHA256_LENGTH EQUAL 64
)
    message(FATAL_ERROR "SHEJANE_MODEL_SHA256 must be a canonical SHA-256 digest")
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
set(GGML_STATIC ON CACHE BOOL "" FORCE)
set(GGML_NATIVE OFF CACHE BOOL "" FORCE)
set(GGML_METAL OFF CACHE BOOL "" FORCE)
set(GGML_BLAS OFF CACHE BOOL "" FORCE)
set(GGML_ACCELERATE OFF CACHE BOOL "" FORCE)
set(GGML_CCACHE OFF CACHE BOOL "" FORCE)
set(GGML_OPENMP OFF CACHE BOOL "" FORCE)
set(GGML_RPC OFF CACHE BOOL "" FORCE)
set(GGML_CPU_REPACK OFF CACHE BOOL "" FORCE)
set(WHISPER_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(WHISPER_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(WHISPER_BUILD_SERVER OFF CACHE BOOL "" FORCE)
set(WHISPER_CURL OFF CACHE BOOL "" FORCE)
set(WHISPER_SDL2 OFF CACHE BOOL "" FORCE)
set(WHISPER_COREML OFF CACHE BOOL "" FORCE)
set(WHISPER_OPENVINO OFF CACHE BOOL "" FORCE)

add_subdirectory("${WHISPER_SOURCE}" whisper EXCLUDE_FROM_ALL)

add_executable(
    speech-engine
    speech_engine.cpp
)
target_include_directories(
    speech-engine
    PRIVATE
    "${WHISPER_SOURCE}/include"
    "${WHISPER_SOURCE}/examples"
)
target_compile_definitions(
    speech-engine
    PRIVATE SHEJANE_MODEL_SHA256="${SHEJANE_MODEL_SHA256}"
)
target_link_libraries(speech-engine PRIVATE whisper)
