[package]
name = "shejane-archive-fixture"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
serde_json = "1.0.145"
wit-bindgen = "0.59.0"
zip = { version = "6.0.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
